--- a/shaku_derive/Cargo.toml
+++ b/shaku_derive/Cargo.toml
@@ -11,6 +11,9 @@ edition = "2018"
 [lib]
 proc-macro = true
 
+[features]
+async_provider = []
+
 [dependencies]
 quote = "1.0"
 syn = { version = "1.0", features = ["extra-traits", "full"] }
